--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,19 @@
+
+.ant-layout-header{
+  background: #2b959c !important;
+}
+.ant-menu.ant-menu-dark{
+   background: none !important; 
+}
+a{
+ color:#fff!important; 
+}
+/* 
+
+ .ant-menu-item:hover{
+color:  #2b959c !important;
+background: #fff !important; 
+} */
 .ant-layout-sider-trigger {
   position:absolute !important;
 }
@@ -11,8 +27,55 @@ position: fixed;
 
 margin: 64px 24px 16px 0px !important;
 }
-/*Project Cards */
+.text-right{
+ text-align: right !important;
+}
+.text-left{
+ text-align: left !important;
+}
+/*Product Cards */
 .dateCreated {
 color:#bfbfbf;
 text-align: end;
 }
+.right{
+ float: right;
+}
+.left{
+ float: left;
+}
+.product-card{
+  width:200px;
+ height: 300px;
+
+}
+.ant-card-cover img{
+  width: 250px;
+}
+  .product-card img,.cart-img{
+  max-width: 160px;
+  max-height: 160px;
+  margin: 10px 20px;
+}
+
+@media only screen 
+  and (min-device-width: 360px) 
+  and (max-device-width: 640px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .product-card img,.cart-img{
+  max-width: 160px;
+  max-height: 160px;
+  margin: 10px 20px;
+}
+  }
+  /*Laptop*/
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+       .product-card img{
+  /* max-width: 200px;
+  max-height: 200px; */
+  margin: 10px 20px;
+}
+  }
